[project]
name = "pydashboard"
version = "0.1.0"
description = "A simple dashboard with streamlit"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.12.5",
    "streamlit>=1.54.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
    "ty>=0.0.17",
    "types-requests>=2.32.4.20260107",
]

[tool.ty.rules]
division-by-zero = "error"
